tests/valid/exported_foreign_type.m
:- module exported_foreign_type.
:- interface.
:- import_module exported_foreign_type2.
:- type t2 == t.
